Fix spacedraw drawing, make clicking less touchy (closes #3986)
Root cause was the vertex shadow strokes were too big, esp on endpoints.
For normal lines 16px stroke width centers on the line, but for vertices
it extends beyond the vertex radius, stealing clicks.

Also switched some "globals" to module variables in draw.js

--- a/css/20_map.css
+++ b/css/20_map.css
@@ -83,7 +83,7 @@ g.midpoint .fill {
 
 g.vertex .shadow,
 g.midpoint .shadow {
-    stroke-width: 16;
+    stroke-width: 6;
     fill: #f6634f;
     fill-opacity: 0;
 }
